--- a/Website/BBeu-Website/src/app/Components/navbar/navbar.component.html
+++ b/Website/BBeu-Website/src/app/Components/navbar/navbar.component.html
@@ -6,6 +6,7 @@
       <label for="search1">Search</label>
     </div>
   </form>
+  <input type="text" placeholder="Search..">
 
 <!--  <input type="text" placeholder="Search.." name="search">-->
 <!--  <button type="submit"><i class="fa fa-search"></i></button>-->
