--- a/Website/BBeu-Website/src/app/Components/searchbar/searchbar.component.html
+++ b/Website/BBeu-Website/src/app/Components/searchbar/searchbar.component.html
@@ -45,6 +45,41 @@
 
 
   </form>
+
+  <div>
+    <h2>Aktivitets steder</h2>
+    <ul class="list-group, activityList">
+      <!--    <li *ngFor="let activity of Activities" >-->
+      <li *ngFor="let room of Rooms" >
+
+<!--        (click)="onSelect(activity)"-->
+
+        <span class="list-group-item"><div class="listDivider">Sted: {{room.Address}} </div> <div class="listDivider"> Nuværende antal gæster: {{room.Price}}</div>  <div class="listDivider"> Maximum antal gæster: {{room.Price}}</div> </span>
+
+
+      </li>
+    </ul>
+
+  </div>
+
+  <form class="example-form">
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>Number</mat-label>
+      <input type="text"
+             placeholder="Pick one"
+             aria-label="Number"
+             matInput
+             [formControl]="myControl"
+             [matAutocomplete]="auto">
+
+  <mat-autocomplete #auto="matAutocomplete">
+    <mat-option *ngFor="let room of Rooms" [value]="room">
+      {{room}}
+    </mat-option>
+  </mat-autocomplete>
+
+    </mat-form-field>
+    </form>
 <!--  <mat-form-field appearance="fill">-->
 <!--    <mat-label>Choose a date</mat-label>-->
 <!--    <input matInput [matDatepicker]="picker">-->
