--- a/Website/BBeu-Website/src/app/Components/searchbar/searchbar.component.html
+++ b/Website/BBeu-Website/src/app/Components/searchbar/searchbar.component.html
@@ -64,22 +64,22 @@
 
   <form class="example-form">
     <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Number</mat-label>
+      <mat-label [className]="AddressLabel">Number</mat-label>
       <input type="text"
              placeholder="Pick one"
              aria-label="Number"
              matInput
-             [formControl]="myControl"
              [matAutocomplete]="auto">
 
   <mat-autocomplete #auto="matAutocomplete">
-    <mat-option *ngFor="let room of Rooms" [value]="room">
-      {{room}}
+    <mat-option *ngFor="let room of Rooms " [value]="room.Address">
+      {{room.Address}}
     </mat-option>
   </mat-autocomplete>
 
     </mat-form-field>
     </form>
+  <button type="button" (click)="addressSearch">Søg date </button>
 <!--  <mat-form-field appearance="fill">-->
 <!--    <mat-label>Choose a date</mat-label>-->
 <!--    <input matInput [matDatepicker]="picker">-->
