--- a/Website/BBeu-Website/src/app/app.component.html
+++ b/Website/BBeu-Website/src/app/app.component.html
@@ -1,4 +1,6 @@
 
 <app-navbar></app-navbar>>
 <app-searchbar></app-searchbar>
+<app-searchtesting></app-searchtesting>
+
 <router-outlet></router-outlet>
