--- a/Website/BBeu-Website/src/app/Components/searchtesting/searchtesting.component.html
+++ b/Website/BBeu-Website/src/app/Components/searchtesting/searchtesting.component.html
@@ -1,6 +1,32 @@
-<div id="SearchBar">
-<input type="text" ng-model="searchBox">
+<!--<div id="SearchBar">-->
+<!--&lt;!&ndash;<input type="text" ng-model="searchBox">&ndash;&gt;-->
+
+<!--&lt;!&ndash;<div ng-controller="location">&ndash;&gt;-->
+<!--&lt;!&ndash;  <ul>&ndash;&gt;-->
+<!--&lt;!&ndash;    <p> Steder:</p>&ndash;&gt;-->
+<!--&lt;!&ndash;    <li ng-repeat="location in locations | filter:searchBox">&ndash;&gt;-->
+<!--&lt;!&ndash;        {{location.Postalnumber + ' : '+ location.City}}&ndash;&gt;-->
+<!--&lt;!&ndash;    </li>&ndash;&gt;-->
+<!--&lt;!&ndash;  </ul>&ndash;&gt;-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
 
 
 
-</div>
+
+<!--  <div>-->
+<!--    <h2>Aktivitets steder</h2>-->
+<!--    <ul class="list-group, activityList">-->
+<!--      &lt;!&ndash;    <li *ngFor="let activity of Activities" >&ndash;&gt;-->
+<!--      <li *ngFor="let location of Locations" >-->
+
+<!--        &lt;!&ndash;        (click)="onSelect(activity)"&ndash;&gt;-->
+
+<!--        <span class="list-group-item"><div class="listDivider">Sted: {{location.Postalcode}} </div> <div class="listDivider"> Nuværende antal gæster: {{location.City}}</div>  </span>-->
+
+
+<!--      </li>-->
+<!--    </ul>-->
+
+<!--  </div>-->
+
+<!--</div>-->
