--- a/Website/BBeu-Website/src/app/Components/searchtesting/searchtesting.component.html
+++ b/Website/BBeu-Website/src/app/Components/searchtesting/searchtesting.component.html
@@ -1,14 +1,14 @@
-<!--<div id="SearchBar">-->
-<!--&lt;!&ndash;<input type="text" ng-model="searchBox">&ndash;&gt;-->
+<div id="SearchBar">
+<!--<input type="text" ng-model="searchBox">-->
 
-<!--&lt;!&ndash;<div ng-controller="location">&ndash;&gt;-->
-<!--&lt;!&ndash;  <ul>&ndash;&gt;-->
-<!--&lt;!&ndash;    <p> Steder:</p>&ndash;&gt;-->
-<!--&lt;!&ndash;    <li ng-repeat="location in locations | filter:searchBox">&ndash;&gt;-->
-<!--&lt;!&ndash;        {{location.Postalnumber + ' : '+ location.City}}&ndash;&gt;-->
-<!--&lt;!&ndash;    </li>&ndash;&gt;-->
-<!--&lt;!&ndash;  </ul>&ndash;&gt;-->
-<!--&lt;!&ndash;</div>&ndash;&gt;-->
+<!--<div ng-controller="location">-->
+<!--  <ul>-->
+<!--    <p> Steder:</p>-->
+<!--    <li ng-repeat="location in locations | filter:searchBox">-->
+<!--        {{location.Postalnumber + ' : '+ location.City}}-->
+<!--    </li>-->
+<!--  </ul>-->
+<!--</div>-->
 
 
 
@@ -17,11 +17,15 @@
 <!--    <h2>Aktivitets steder</h2>-->
 <!--    <ul class="list-group, activityList">-->
 <!--      &lt;!&ndash;    <li *ngFor="let activity of Activities" >&ndash;&gt;-->
-<!--      <li *ngFor="let location of Locations" >-->
+<!--      <li *ngFor="let location of locations" >-->
 
 <!--        &lt;!&ndash;        (click)="onSelect(activity)"&ndash;&gt;-->
 
-<!--        <span class="list-group-item"><div class="listDivider">Sted: {{location.Postalcode}} </div> <div class="listDivider"> Nuværende antal gæster: {{location.City}}</div>  </span>-->
+<!--        <span class="list-group-item"><div class="listDivider">Fuld object: {{(location)}} </div>-->
+<!--          <div class="listDivider">Postal: {{(location.Postalcode)}}</div>-->
+<!--        <div class="listDivider">City: {{location.City}}</div>-->
+<!--        </span>-->
+
 
 
 <!--      </li>-->
@@ -29,4 +33,24 @@
 
 <!--  </div>-->
 
-<!--</div>-->
+  <div>
+    <h2>Locations</h2>
+    <ul class="list-group, activityList">
+      <!--    <li *ngFor="let activity of Activities" >-->
+      <li *ngFor="let location of locations" >
+
+        <!--        (click)="onSelect(activity)"-->
+
+        <span class="list-group-item"><div class="listDivider">Fuld object: {{location}} </div>
+          <div class="listDivider">Postal: {{location.Postalcode}}</div>
+        <div class="listDivider">City: {{location.City}}</div>
+        </span>
+
+
+
+      </li>
+    </ul>
+
+  </div>
+
+</div>
