--- a/Website/BBeu-Website/src/app/Components/searchbar/searchbar.component.html
+++ b/Website/BBeu-Website/src/app/Components/searchbar/searchbar.component.html
@@ -20,65 +20,69 @@
 
 
 
-  <form action="/action_page.php">
-    <label for="fromDate">Fra dato:</label>
+<!--  <form action="/action_page.php">-->
+<!--    <label for="fromDate">Fra dato:</label>-->
 
-<!--    <input type="submit">-->
-<!--    <label [className]="inputtest">skriv her</label>-->
-    <input type="text" value="hej" id="inputtest" name="inputtest" #inputtest>
-    <input type="date" id="fromDate" name="fromDate" #fromDate>
-
-
-    <label [className]="testLabel" >{{inputtest.value}}</label>
+<!--&lt;!&ndash;    <input type="submit">&ndash;&gt;-->
+<!--&lt;!&ndash;    <label [className]="inputtest">skriv her</label>&ndash;&gt;-->
+<!--    <input type="text" value="hej" id="inputtest" name="inputtest" #inputtest>-->
+<!--    <input type="date" id="fromDate" name="fromDate" #fromDate>-->
 
 
-
-    <button type="button" (click)="search">Søg </button>
-
-    <label [className]="testdatoLabel" >{{fromDate.value}}</label>
-
-
-    <button type="button" (click)="datesearch">Søg date </button>
+<!--    <label [className]="testLabel" >{{inputtest.value}}</label>-->
 
 
 
+<!--    <button type="button" (click)="search">Søg </button>-->
+
+<!--    <label [className]="testdatoLabel" >{{fromDate.value}}</label>-->
 
 
-  </form>
+<!--    <button type="button" (click)="datesearch">Søg date </button>-->
+
+
+
+
+
+<!--  </form>-->
 
   <div>
-    <h2>Aktivitets steder</h2>
+    <h2>Rooms</h2>
     <ul class="list-group, activityList">
       <!--    <li *ngFor="let activity of Activities" >-->
       <li *ngFor="let room of rooms" >
 
 <!--        (click)="onSelect(activity)"-->
 
-        <span class="list-group-item"><div class="listDivider">Addresse: {{room.Address}} </div> <div class="listDivider"> Price: {{room.Price}}</div>  </span>
+<!--        <span class="list-group-item"><div class="listDivider">{{room}}Addresse: {{room.getaddress}}{{(parsedJson)}}{{(parsedJson2)}} </div> <div class="listDivider"> Price: {{room.getprice}}</div>  </span>-->
+<!--        hallo-->
+<!--        {{room.getaddress}}-->
 
-
+      </li>
+      <li *ngFor="let t of trees">
+        {{t.color}}
       </li>
     </ul>
 
   </div>
 
-  <form class="example-form">
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label [className]="AddressLabel">Number</mat-label>
-      <input type="text"
-             placeholder="Pick one"
-             aria-label="Number"
-             matInput
-             [matAutocomplete]="auto">
+<!--  <form class="example-form">-->
+<!--    <mat-form-field class="example-full-width" appearance="fill">-->
+<!--      <mat-label [className]="AddressLabel">Number</mat-label>-->
+<!--      <input type="text"-->
+<!--             placeholder="Pick one"-->
+<!--             aria-label="Number"-->
+<!--             matInput-->
+<!--             [matAutocomplete]="auto">-->
 
   <mat-autocomplete #auto="matAutocomplete">
-    <mat-option *ngFor="let room of rooms " [value]="room.Address">
-      {{room.Address}}
-    </mat-option>
+<!--    <mat-option *ngFor="let room of rooms " [value]="room.Address">-->
+<!--      {{room.Address}}-->
+<!--    </mat-option>-->
   </mat-autocomplete>
 
-    </mat-form-field>
-    </form>
+<!--    </mat-form-field>-->
+<!--    </form>-->
   <button type="button" (click)="addressSearch">Søg date </button>
 <!--  <mat-form-field appearance="fill">-->
 <!--    <mat-label>Choose a date</mat-label>-->
