--- a/Website/BBeu-Website/src/app/Components/searchtesting/searchtesting.component.html
+++ b/Website/BBeu-Website/src/app/Components/searchtesting/searchtesting.component.html
@@ -52,5 +52,9 @@
     </ul>
 
   </div>
+  <div class="form-group">
+    <label>Adresse</label>
+    <input type="address" class="form-control">
+  </div>
 
 </div>
