--- a/Website/BBeu-Website/src/app/Components/searchbar/searchbar.component.html
+++ b/Website/BBeu-Website/src/app/Components/searchbar/searchbar.component.html
@@ -1,4 +1,3 @@
-<div id="">
 <div id="SearchBar">
 <!--  <input type="text" placeholder="Search..">-->
 <!--  <mat-form-field class="example-form-field" appearance="fill">-->
@@ -23,17 +22,51 @@
 <!--  <form action="/action_page.php">-->
 <!--    <label for="fromDate">Fra dato:</label>-->
 
-<!--&lt;!&ndash;    <input type="submit">&ndash;&gt;-->
-<!--&lt;!&ndash;    <label [className]="inputtest">skriv her</label>&ndash;&gt;-->
-<!--    <input type="text" value="hej" id="inputtest" name="inputtest" #inputtest>-->
-<!--    <input type="date" id="fromDate" name="fromDate" #fromDate>-->
 
 
-<!--    <label [className]="testLabel" >{{inputtest.value}}</label>-->
+    <label [className]="testLabel" >{{inputtest.value}}</label>
+
+  <label [className]="testLabel2" >{{addressInput.value}}</label>
+
+
+  <input type="text" value="hej" id="inputtest" name="inputtest" #inputtest>
+
+
+    <button type="button" (click)="search">Søg </button>
 
 
 
-<!--    <button type="button" (click)="search">Søg </button>-->
+  <form class="example-form">
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>By/Postnummer:</mat-label>
+      <input matInput type="text"
+             placeholder="locationHolder"
+             [matAutocomplete]="auto" #addressInput>
+      <!--      [className]="addressClass"-->
+
+      <mat-autocomplete #auto="matAutocomplete">
+        <mat-option *ngFor="let location of locations" [value]="location.City">
+          {{location.City}}
+        </mat-option>
+      </mat-autocomplete>
+
+    </mat-form-field>
+  </form>
+
+
+  <h2>Dato format: DD/MM/YYYY</h2>
+  <div class="form-group">
+    <label>Fra dato:</label>
+    <input type="date" class="form-control">
+  </div>
+
+  <div class="form-group">
+    <label>Til dato:</label>
+    <input type="date" class="form-control">
+  </div>
+  <!--    </mat-form-field>-->
+  <!--    </form>-->
+  <button type="button" (click)="addressSearch">Søg date </button>
 
 <!--    <label [className]="testdatoLabel" >{{fromDate.value}}</label>-->
 
@@ -45,25 +78,56 @@
 
 
 
-  <div>
-    <h2>Locations</h2>
-    <ul class="list-group, activityList">
-      <!--    <li *ngFor="let activity of Activities" >-->
-      <li *ngFor="let location of locations" >
+<!--  <div>-->
+<!--    <h2>Locations</h2>-->
+<!--    <ul class="list-group, activityList">-->
+<!--      &lt;!&ndash;    <li *ngFor="let activity of Activities" >&ndash;&gt;-->
+<!--      <li *ngFor="let location of locations" >-->
 
-        <!--        (click)="onSelect(activity)"-->
+<!--        &lt;!&ndash;        (click)="onSelect(activity)"&ndash;&gt;-->
 
-        <span class="list-group-item"><div class="listDivider">Fuld object: {{location}} </div>
-          <div class="listDivider">Postal: {{location.Postalcode}}</div>
-        <div class="listDivider">City: {{location.City}}</div>
-        </span>
+<!--        <span class="list-group-item"><div class="listDivider">Fuld object: {{location}} </div>-->
+<!--          <div class="listDivider">Postal: {{location.Postalcode}}</div>-->
+<!--        <div class="listDivider">City: {{location.City}}</div>-->
+<!--        </span>-->
 
 
 
-      </li>
-    </ul>
+<!--      </li>-->
+<!--    </ul>-->
+<!--  </div>-->
+<!--    <mat-form-field appearance="fill"  >-->
+<!--      <input matInput placeholder="search titel" formControlName="titel" >-->
+<!--    </mat-form-field>-->
 
-  </div>
+<!--    <form class="example-form">-->
+<!--      <mat-form-field class="example-full-width" appearance="fill">-->
+<!--        <mat-label>Number</mat-label>-->
+<!--        <input type="text"-->
+<!--               placeholder="Pick one"-->
+<!--               matInput-->
+<!--               [matAutocomplete]="auto">-->
+<!--        <mat-autocomplete #auto="matAutocomplete">-->
+<!--          <mat-option *ngFor="let location of locations" [value]="location.City">-->
+<!--            {{location.City}}-->
+<!--          </mat-option>-->
+<!--        </mat-autocomplete>-->
+<!--      </mat-form-field>-->
+<!--    </form>-->
+
+
+<!--    <div class="md-form">-->
+<!--      <input type="search" [className]="searchText"  placeholder="Search text">-->
+<!--    </div>-->
+<!--    <ul *ngFor="let location of locations ">-->
+<!--      <li>{{location.City}}</li>-->
+<!--    </ul>-->
+
+<!--<div [formGroup]="form" class="formfieldtest">-->
+
+
+<!--</div>-->
+
 
 <!--  <form class="example-form">-->
 <!--    <mat-form-field class="example-full-width" appearance="fill">-->
@@ -80,16 +144,24 @@
 <!--    </mat-option>-->
 <!--  </mat-autocomplete>-->
 
-  <div class="md-form">
-    <input type="search" [className]="searchText"  placeholder="Search text">
-  </div>
-  <ul *ngFor="let location of locations ">
-    <li>{{location.City}}</li>
-  </ul>
 
+<!--  <form class="example-form">-->
+<!--    <mat-form-field class="example-full-width" appearance="fill">-->
+<!--      <mat-label>Number</mat-label>-->
+<!--      <input type="text"-->
+<!--             placeholder="Pick one"-->
+<!--             matInput-->
+<!--             [matAutocomplete]="auto">-->
+<!--      <mat-autocomplete #auto="matAutocomplete">-->
+<!--        <mat-option *ngFor="let location of locations" [value]="location.City">-->
+<!--          {{location.City}}-->
+<!--        </mat-option>-->
+<!--      </mat-autocomplete>-->
 <!--    </mat-form-field>-->
-<!--    </form>-->
-  <button type="button" (click)="addressSearch">Søg date </button>
+<!--  </form>-->
+
+
+
 <!--  <mat-form-field appearance="fill">-->
 <!--    <mat-label>Choose a date</mat-label>-->
 <!--    <input matInput [matDatepicker]="picker">-->
@@ -111,4 +183,4 @@
 
 </div>
 
-</div>
+
