--- a/Website/BBeu-Website/src/app/Components/searchtesting/searchtesting.component.html
+++ b/Website/BBeu-Website/src/app/Components/searchtesting/searchtesting.component.html
@@ -52,9 +52,33 @@
     </ul>
 
   </div>
-  <div class="form-group">
-    <label>Adresse</label>
-    <input type="address" class="form-control">
+
+
+  <div class="container">
+    <form>
+      <div class="form-group">
+        <label>By/Postnummer:</label>
+<!--        <label>{{'Name' | translate}}</label>-->
+
+        <input type="address" class="form-control">
+<!--        <small class="text-danger">{{'NameError' | translate}}</small>-->
+      </div>
+      <h2>Dato format: DD/MM/YYYY</h2>
+      <div class="form-group">
+        <label>Fra dato:</label>
+        <input type="date" class="form-control">
+      </div>
+
+      <div class="form-group">
+        <label>Til dato:</label>
+        <input type="date" class="form-control">
+      </div>
+
+
+    </form>
   </div>
+
+<!--  <input matInput type="text"  [(ngModel)]="searchword"(input)="searchThis()">-->
+
 
 </div>
