--- a/Website/BBeu-Website/src/app/Components/navbar/navbar.component.html
+++ b/Website/BBeu-Website/src/app/Components/navbar/navbar.component.html
@@ -1,12 +1,12 @@
 <div class="toolbar" role="banner">
   <h2>BB.EU </h2>
-  <form>
-    <div class="md-form active-pink active-pink-2 mb-3">
-      <input class="form-control" type="search" id="search1" aria-label="Search" mdbInput>
-      <label for="search1">Search</label>
-    </div>
-  </form>
-  <input type="text" placeholder="Search..">
+<!--  <form>-->
+<!--    <div class="md-form active-pink active-pink-2 mb-3">-->
+<!--      <input class="form-control" type="search" id="search1" aria-label="Search" mdbInput>-->
+<!--      <label for="search1">Search</label>-->
+<!--    </div>-->
+<!--  </form>-->
+<!--  <input type="text" placeholder="Search..">-->
 
 <!--  <input type="text" placeholder="Search.." name="search">-->
 <!--  <button type="submit"><i class="fa fa-search"></i></button>-->
